http get and response header

--- a/resource/404.html
+++ b/resource/404.html
@@ -3,7 +3,8 @@
 	<title>计网实验</title>
 </head>
 <body>
-	<p>hello world </p>
-	<img src="hust.jpg" >
+    <h1 align="center">
+        404 Not Found
+    </h1>
 </body>
 </html>
