--- a/resource/index.html
+++ b/resource/index.html
@@ -1,9 +1,14 @@
 <html>
-<head>
-	<title>计网实验</title>
-</head>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<title>计网实验</title>
+	</head>
 <body>
 	<p>hello world </p>
-	<img src="hust.jpg" >
+	<img src="hust.jpg" type="image/jpg" width="200" height="120">
+	<img src="cat.gif" type="iamge/gif" width="200" height="120">
+	<video width="320" height="240" controls>
+		<source src="nobody.mp4" type="video/mp4">
+	  </video>
 </body>
 </html>
