--- a/resource/404.html
+++ b/resource/404.html
@@ -1,7 +1,8 @@
 <html>
-<head>
-	<title>计网实验</title>
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	    <title>404 Not Found</title>
+    </head>
 <body>
     <h1 align="center">
         404 Not Found
